# photo-prediction-app

./: .gitignore  README.md  app.py  build.sh  pyproject.toml  requirements.txt  start.sh
static/: style.css
templates/: index.html
