[tool.poetry]
name = "photo-prediction-app"
version = "0.1.0"
description = "MNIST Digit Recognition App"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "~3.11"
flask = "^3.0.2"
tensorflow-cpu = "^2.15.0"
pillow = "^10.3.0"
opencv-python-headless = "^4.9.0.80"
numpy = "^1.26.4"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"